# apiProject

./: .gitignore  README.md  pyproject.toml
apps/gerenciaProdutos/: admin.py  apps.py  models.py  mySerializers.py  urls.py  views.py
apps/gerenciaProdutos/migrations/: 0001_initial.py  0002_auto_20210605_0102.py  0003_auto_20210605_0106.py  0004_estoque_produtovendido.py
config/: asgi.py  settings.py  urls.py  wsgi.py
libs/: string.py
